<resources>
    <string name="app_name">GuitarApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_your_guitar_journey_today">Start your guitar journey today</string>
    <string name="welcome">Welcome</string>
    <string name="image_of_guitar">image of guitar</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="line">line</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailwidget">emailWidget</string>
    <string name="passwordwidget">passwordWidget</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_account">Create Account</string>
    <string name="continue_button">Continue</string>
    <string name="name">Name</string>
    <string name="person">person</string>
    <string name="arrow">arrow</string>
    <string name="account_details">Account Details</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="your_dashboard">Your Dashboard</string>
    <string name="accountbutton">accountButton</string>
    <string name="studentsbutton">studentsButton</string>
    <string name="createbutton">createButton</string>
    <string name="plannerbutton">plannerButton</string>
    <string name="filesbutton">filesButton</string>
    <string name="lessonsbutton">lessonsButton</string>
    <string name="homeworkbutton">homeworkButton</string>
    <string name="reminderbutton">reminderButton</string>
    <string name="password_widget">password Widget</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-enter New Password</string>
    <string name="students">Students</string>
    <string name="add_student">Add Student</string>
    <string name="are_you_sure_you_want_to_delete_this_student">Are you sure you want to delete this student?</string>
    <string name="bin_image">bin image</string>
    <string name="yes_button">yes button</string>
    <string name="no_button">no button</string>
    <string name="save_image">save image</string>
    <string name="would_you_like_to_save_first">Would you like to save first?</string>
    <string name="chords">Chords</string>
    <string name="arpeggios">Arpeggios</string>
    <string name="scales">Scales</string>
    <string name="add_time">Add Time</string>
    <string name="add">Add</string>
    <string name="planner">Planner</string>
    <string name="your_files">Your Files</string>
    <string name="are_you_sure_you_want_to_delete_this_file">Are you sure you want to delete this file?</string>
    <string name="lessons">Lessons</string>
    <string name="homework">Homework</string>
    <string name="practice_reminder">Practice Reminder</string>
    <string name="set">Set</string>
    <string name="reminder_message">Reminder Message</string>
    <string name="account_type_hint">Select Account Type</string>
    <string name="home_button">Home Button</string>
    <string name="minimum_password">Enter a password with minimum 6 characters</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="update_details">Update Details</string>
    <string name="update">Update</string>
    <string name="back_button">back button</string>
    <string name="update_student">Update Student</string>
    <string name="delete_student">Do you want to delete this student?</string>
    <string name="delete_student_no_button">delete student no button</string>
    <string name="delete_student_yes_button">delete student yes button</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset">Reset</string>
    <string name="delete_file_validation">Are you sure you want to delete this file?</string>
    <string name="select_student">Select Student</string>
    <string name="send_file">Send File</string>
    <string name="to">To:</string>
    <string name="subject">Subject</string>
    <string name="subject2">Subject:</string>
    <string name="message">Message:</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="lesson_files">Lesson Files</string>
    <string name="homework_files">Homework Files</string>
    <string name="teacher_file_save">Do you want to save this file?</string>
    <string name="student_file_save">Which folder do you want to save to?</string>
    <string name="please_login_and_try_again">Please login and try again</string>
    <string name="create">Create</string>
    <string name="sample">sample</string>
    <string name="add_text">Add Text</string>
    <string name="save">Save</string>
    <string name="enter_text">Enter Text</string>
    <string name="sample1">Sample</string>
    <string name="add_image">Add Image</string>
    <string name="clear">Clear</string>
    <string name="ar_you_sure_you_want_to_clear_your_work">Ar you sure you want to clear your work?</string>
    <string name="are_you_sure_you_want_to_clear_your_work">Are you sure you want to clear your work?</string>
    <string name="have_you_saved_your_work">Have you saved your work?</string>
    <string name="chord">Chord</string>
    <string name="scale">Scale</string>
    <string name="what_image_would_you_like_to_add">What image would you like to add?</string>
    <string name="arpeggio">Arpeggio</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="enter">Enter</string>
    <string name="please_enter_your_password_to_continue">Please enter your password to continue</string>

    //spinner
    <string-array name="account_types">
        <item>Teacher</item>
        <item>Student</item>
    </string-array>

</resources>
