<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".controllers.emailExport.EmailExportActivity"
    android:background="@color/black"
    android:padding="@dimen/_8sdp">

    <TextView
        android:id="@+id/sendFileTV"
        android:layout_width="@dimen/_165sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/send_file"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:fontFamily="@font/helvetica_neue_ultralight" />

    <TextView
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_2sdp"
        android:text="@string/to"
        android:textSize="@dimen/_15sdp"
        app:fontFamily="@font/helvetica_neue_thin" />

    <EditText
        android:id="@+id/edit_text_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_bottom_line"
        android:hint="@string/email"
        android:padding="@dimen/_2sdp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_2sdp"
        android:text="@string/subject2"
        android:textSize="@dimen/_15sdp"
        app:fontFamily="@font/helvetica_neue_thin" />

    <EditText
        android:id="@+id/edit_text_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject"
        android:background="@drawable/edittext_bottom_line"
        android:hint="@string/subject"
        android:padding="2dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_2sdp"
        android:text="Attachment:"
        android:textSize="@dimen/_15sdp"
        app:fontFamily="@font/helvetica_neue_thin" />

    <TextView
        android:id="@+id/text_attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bottom_line"
        android:padding="@dimen/_2sdp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/messageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_2sdp"
        android:text="@string/message"
        android:textSize="@dimen/_15sdp"
        app:fontFamily="@font/helvetica_neue_thin" />

    <EditText
        android:id="@+id/edit_text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="10"
        android:background="@drawable/edittext_bottom_line"
        android:padding="@dimen/_2sdp"
        android:gravity="start|top"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_50sdp"
        android:padding="@dimen/_10sdp">

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_weight="1"
        android:background="@drawable/custom_button"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_20sdp"
        app:fontFamily="@font/helvetica_neue_ultralight"
        android:onClick="onCancelClicked"
        />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_20sdp"
            app:fontFamily="@font/helvetica_neue_ultralight" />

    </LinearLayout>









</LinearLayout>