<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".controllers.auth.RegistrationActivity"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/createAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        app:fontFamily="@font/helvetica_neue_ultralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_20sdp"
        app:fontFamily="@font/helvetica_neue_ultralight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:onClick="onRegisterClicked"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:autofillHints=""
        android:background="@drawable/edittext_bottom_line"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:fontFamily="@font/helvetica_neue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTextView" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_90sdp"
        android:autofillHints=""
        android:background="@drawable/edittext_bottom_line"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:fontFamily="@font/helvetica_neue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTextView" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:autofillHints=""
        android:background="@drawable/edittext_bottom_line"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:fontFamily="@font/helvetica_neue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <ImageView
        android:id="@+id/passwordImageView"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_36sdp"
        android:contentDescription="@string/passwordwidget"
        android:src="@drawable/ic_https_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailImageView" />

    <ImageView
        android:id="@+id/emailImageView"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_90sdp"
        android:contentDescription="@string/emailwidget"
        android:src="@drawable/ic_mail_outline_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/emailEditText"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTextView" />

    <ImageView
        android:id="@+id/personImageView"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTextView"
        android:contentDescription="@string/person"/>

    <Spinner
        android:id="@+id/spinner2"
        android:spinnerMode="dialog"
        android:prompt="@string/account_type_hint"
        android:theme="@style/spinnerTheme"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:background="@drawable/edittext_bottom_line" />

    <ImageView
        android:id="@+id/arrowImageView"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/ic_arrow_downward_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/spinner2"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordImageView"
        android:contentDescription="@string/arrow"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="center|bottom"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountTextView"
        app:layout_constraintVertical_bias="0.809" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/black"
        android:contentDescription="@string/back_button"
        android:onClick="onBackClicked"
        android:src="@drawable/backward_arrow"
        app:layout_constraintBottom_toTopOf="@+id/personImageView"
        app:layout_constraintEnd_toStartOf="@+id/createAccountTextView"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />


</androidx.constraintlayout.widget.ConstraintLayout>