<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".controllers.teacher.studentList.AddStudentActivity"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/addStudentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/add_student"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        app:fontFamily="@font/helvetica_neue_ultralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@color/black"
        android:contentDescription="@string/home_button"
        android:onClick="onHomeClicked"
        android:src="@drawable/ic_home_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toEndOf="@+id/addStudentTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addStudentButton"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/custom_button"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_20sdp"
        app:fontFamily="@font/helvetica_neue_ultralight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:autofillHints=""
        android:background="@drawable/edittext_bottom_line"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:fontFamily="@font/helvetica_neue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStudentTextView" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/_225sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:autofillHints=""
        android:background="@drawable/edittext_bottom_line"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="@dimen/_10sdp"
        android:visibility="visible"
        app:fontFamily="@font/helvetica_neue_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <ImageView
        android:id="@+id/personImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:contentDescription="@string/person"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/nameEditText"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addStudentTextView" />

    <ImageView
        android:id="@+id/emailImageView"
        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_14sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginLeft="@dimen/_14sdp"
        android:layout_marginTop="78dp"
        android:contentDescription="@string/emailwidget"
        android:src="@drawable/ic_mail_outline_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/emailEditText"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personImageView" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@color/black"
        android:contentDescription="@string/back_button"
        android:onClick="onBackClicked"
        android:src="@drawable/backward_arrow"
        app:layout_constraintBottom_toTopOf="@+id/personImageView"
        app:layout_constraintEnd_toStartOf="@+id/addStudentTextView"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />


</androidx.constraintlayout.widget.ConstraintLayout>